// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header basic 1`] = `
<div
  className="QuoteText"
  dangerouslySetInnerHTML={
    Object {
      "__html": "I am a quote<br />Hear me roar",
    }
  }
/>
`;

exports[`header embedded HTML 1`] = `
<div
  className="QuoteText"
  dangerouslySetInnerHTML={
    Object {
      "__html": "I am <em>formatted</em><br />But you can still hear me roar",
    }
  }
/>
`;

exports[`header empty text 1`] = `
<div
  className="QuoteText"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<span></span>",
    }
  }
/>
`;
